# ShakTrisLib

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
src/: CMakeLists.txt  Chance.hpp  Move.cpp  Move.hpp  VersusGame.cpp  VersusGame.hpp  test.cpp
src/engine/: BitPiece.hpp  Board.hpp  Game.cpp  Game.hpp  MoveGen.hpp  Piece.hpp  RotationSystems.hpp  ShaktrisConstants.hpp  TetrisConstants.hpp  Utility.hpp
src/engine/modes/: Botris.hpp  TetrioS1.hpp
src/util/: pext.hpp  rng.hpp
